<resources>
    <string name="app_name">HomeTasks</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Casa</string>
    <string name="menu_tasks">Tarefas</string>
    <string name="menu_routines">Rotinas</string>
    <string name="menu_payments">Pagamentos</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_rules">Regras</string>
</resources>
