<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_check_box"
            android:title="@string/menu_tasks"/>
        <item
            android:id="@+id/nav_routines"
            android:icon="@drawable/ic_check_circle"
            android:title="@string/menu_routines" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item                                                     
            android:id="@+id/nav_rules"
            android:icon="@drawable/ic_priority_high"
            android:title="@string/menu_rules" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_payments"
            android:icon="@drawable/ic_money"
            android:title="@string/menu_payments" />
    </group>
</menu>
